results/SpecGenBench/2-shot/log-RepeatedChar-2023_11_06_03_31_42.txt
import java.util.HashSet;
import java.util.Set;

class RepeatedChar {
    //@ requires s != null;
    //@ ensures \result == ' ' || (\exists int i; 0 <= i && i < s.length(); s.charAt(i) == \result && (\forall int j; 0 <= j && j < i; s.charAt(j) != \result));
    public char repeatedCharacter(String s) {
        Set<Character> seen = new HashSet<Character>();
        
        //@ maintaining (\forall int j; 0 <= j && j < i; s.charAt(j) != ch);
        //@ decreases s.length() - i;
        for (int i = 0; i < s.length(); i++) {
            char ch = s.charAt(i);
            if (!seen.add(ch)) {
                return ch;
            }
        }
        // impossible
        return ' ';
    }
}
/home/max/Documents/JMLGPT/tmp/RepeatedChar.java:10: error: cannot find symbol
        //@ maintaining (\forall int j; 0 <= j && j < i; s.charAt(j) != ch);
                                                                        ^
  symbol:   variable ch
  location: class RepeatedChar
1 error

